--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -22,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b283e30d-d9f6-40a4-b174-8a88d655ae86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Whoa, that's a big one!\n"
+     ]
+    }
+   ],
    "source": [
     "x = 150\n",
     "\n",
@@ -43,10 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eb5227e6-dfca-4010-8d82-1eb382f70a1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x > 100"
    ]
@@ -61,10 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8bfc08a7-fe57-481b-99eb-49b3fbc7cd47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is big, but not THAT big\n"
+     ]
+    }
+   ],
    "source": [
     "x = 150\n",
     "y = 200\n",
@@ -117,14 +144,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)\n",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n",
+      "\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#si-decibel\u001b[39;00m\n",
+      "\u001b[1;32m----> 3\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecibal level?:\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;241m40\u001b[39m):\n",
+      "\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuiet Room\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
     "#si-decibel\n",
     "\n",
-    "x = int(input())"
+    "x = int(input(\"decibal level?:\"))\n",
+    "if x == int(40):\n",
+    "    print(\"Quiet Room\")\n",
+    "elif x == 70:\n",
+    "    print(\"Alarm Clock\")\n",
+    "elif x == 106:\n",
+    "    print(\"Gas Lawnmower\")\n",
+    "elif x == 130:\n",
+    "    print(\"Jackhammer\")\n",
+    "elif (x>40) & (x<70):\n",
+    "    print(\"louder than quiet room, but quieter than Alarm Clock\")\n",
+    "elif (x>70) & (x<106): \n",
+    "    print(\"louder than Alarm Clock, but quieter than Gas Mower\")\n",
+    "elif (x>106) & (x<130):\n",
+    "    print(\"louder than Gas Lawnmower, but quieter than Jackhammer\")\n",
+    "elif x<40:\n",
+    "    print(\"REALLY QUIET\")\n",
+    "else:\n",
+    "    print(\"REALLY LOUD\")\n",
+    "\n"
    ]
   },
   {
@@ -227,12 +290,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "679c4ad5-81eb-428d-9665-309ed2c4f870",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "Long\n",
+      "Time\n",
+      "Ago\n",
+      "In\n",
+      "A\n",
+      "Galaxy\n",
+      "Far\n",
+      "Far\n",
+      "Away\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-print-loop"
+    "#si-print-loop\n",
+    "x = [\"A\",\"Long\",\"Time\",\"Ago\",\"In\",\"A\",\"Galaxy\",\"Far\",\"Far\",\"Away\"]\n",
+    "for i in x:\n",
+    "    print(i)"
    ]
   },
   {
@@ -247,10 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "62d13841-8e8b-417b-a70b-d57f4f39af7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, False, True, False]\n"
+     ]
+    }
+   ],
    "source": [
     "forecastData = [49.5, 40.2, 53.7, 48.9, 51.0]\n",
     "\n",
@@ -270,12 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "34afd161-b9f1-4f73-9b48-2bb5d8204bcf",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List from 0 to 9 [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
+      "\n",
+      "List of multiples of 3 [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99]\n"
+     ]
+    }
+   ],
    "source": [
     "# Make a list of integers from 0 to 9\n",
     "quickList = [i for i in range(10)]\n",
@@ -307,12 +408,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "42ba7d49-bd42-4073-8594-520ecf4347fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 14, 24, 34, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 54, 64, 74, 84, 94, 104, 114, 124, 134, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 154, 164, 174, 184, 194, 204, 214, 224, 234, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 254, 264, 274, 284, 294, 304, 314, 324, 334, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349, 354, 364, 374, 384, 394, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423, 424, 425, 426, 427, 428, 429, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447, 448, 449, 450, 451, 452, 453, 454, 455, 456, 457, 458, 459, 460, 461, 462, 463, 464, 465, 466, 467, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479, 480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491, 492, 493, 494, 495, 496, 497, 498, 499, 504, 514, 524, 534, 540, 541, 542, 543, 544, 545, 546, 547, 548, 549, 554, 564, 574, 584, 594, 604, 614, 624, 634, 640, 641, 642, 643, 644, 645, 646, 647, 648, 649, 654, 664, 674, 684, 694, 704, 714, 724, 734, 740, 741, 742, 743, 744, 745, 746, 747, 748, 749, 754, 764, 774, 784, 794, 804, 814, 824, 834, 840, 841, 842, 843, 844, 845, 846, 847, 848, 849, 854, 864, 874, 884, 894, 904, 914, 924, 934, 940, 941, 942, 943, 944, 945, 946, 947, 948, 949, 954, 964, 974, 984, 994]\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-fours"
+    "#si-fours\n",
+    "\n",
+    "def digit_four(x):\n",
+    "    if \"4\" in str(x):\n",
+    "        return True\n",
+    "    return False\n",
+    "fours=[i for i in range(1000) if digit_four(i)==True]\n",
+    "print(fours)"
    ]
   },
   {
@@ -331,10 +447,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e7b224dc-9d4c-4345-8361-3bf4840a769e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)\n",
+      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n",
+      "\u001b[0;32m      1\u001b[0m total \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m (total\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m):\n",
+      "\u001b[1;32m----> 3\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease enter a number:\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(total)\n",
+      "\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "while (total<=42):\n",
@@ -355,12 +488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-while-loop"
+    "#si-while-loop\n",
+    "x = 432\n",
+    "while x >100:\n",
+    " x = x-10\n",
+    "print(x)"
    ]
   },
   {
@@ -379,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a654076a-8571-406f-9d16-fa3911992de3",
    "metadata": {},
    "outputs": [],
@@ -402,10 +547,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e22bfd48-e02f-4284-8bf6-ee9e45932ba3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.5663706"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "circumference(2)"
    ]
@@ -422,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5eb74139-b605-4a34-815e-dd2afe5cd7da",
    "metadata": {},
    "outputs": [],
@@ -445,10 +601,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "20912ec8-758f-41fe-8bd3-627e20868559",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "factorial(5)"
    ]
@@ -468,9 +635,29 @@
    "execution_count": null,
    "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#si-prime"
+    "#si-prime\n",
+    "def isPrime(x):\n",
+    "    list = range(2,x-1)\n",
+    "    if x==1:\n",
+    "        return False\n",
+    "    elif x>1:\n",
+    "        for i in list:\n",
+    "            if x%i==0:\n",
+    "                return False\n",
+    "        return True\n"
    ]
   },
   {
@@ -487,12 +674,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.25"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#si-taxi"
+    "#si-taxi\n",
+    "def taxiPrice(x):\n",
+    "    return 4.0+(x//140)*.25\n",
+    "taxiPrice(240)\n"
    ]
   },
   {
@@ -542,12 +743,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#si-fibonacci"
+    "#si-fibonacci\n",
+    "def fib(n):\n",
+    "    if n==0:\n",
+    "        return 0\n",
+    "    elif n==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "      return  fib(n-1)+fib(n-2)\n",
+    "\n",
+    "fib(10)"
    ]
   },
   {
@@ -574,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "81d4327b-f7da-4d4a-9a0e-e8496f9ffeb4",
    "metadata": {
     "tags": []
@@ -603,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fc5bcb05-f510-47dc-841c-ea6dd983795b",
    "metadata": {
     "tags": []
@@ -635,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "592e784a-e47c-45ef-9bcf-59fd5437e20d",
    "metadata": {
     "tags": []
