--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -674,14 +674,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.25"
+       "4.267857142857143"
       ]
      },
      "execution_count": null,
@@ -692,8 +692,9 @@
    "source": [
     "#si-taxi\n",
     "def taxiPrice(x):\n",
-    "    return 4.0+(x//140)*.25\n",
-    "taxiPrice(240)\n"
+    "    return 4.0+(x/140)*.25\n",
+    "taxiPrice(240)\n",
+    "taxiPrice(150)\n"
    ]
   },
   {
