--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -674,14 +674,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "271.75"
+       "271.85714285714283"
       ]
      },
      "execution_count": null,
@@ -693,7 +693,7 @@
     "#si-taxi\n",
     "def taxiPrice(x):\n",
     "    y=x*1000\n",
-    "    return 4.0+(y//140)*.25\n",
+    "    return 4.0+(y/140)*.25\n",
     "taxiPrice(240)\n",
     "taxiPrice(150)\n"
    ]
